syntax = "proto3";

package main;

option go_package = "protos/filestream";

service FileStreamService {
    rpc StreamFile(StreamFileRequest) returns (stream StreamFileResponse) {}
}

message StreamFileRequest {
    string filename = 1;
}

message StreamFileResponse {
    bytes chunk = 1;
}
